--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.14",
+    "framer-motion": "^10.10.0",
+    "jszip": "^3.10.1",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "framer-motion": "^10.10.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
-    "jszip": "^3.10.1"
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
